objects/BusinessMilestone.object
<CustomObject>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(PrimaryAccount.FinServ__Status__c,&apos;Active&apos;),NOT(ISNULL(PrimaryAccount.AW_ParentAccount__r.Id))),PrimaryAccount.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>USed to store the Master Account details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Milestones (MasterAccount)</relationshipLabel>
        <relationshipName>Business_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(PrimaryAccount.Id)),PrimaryAccount.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_BusinessMilestones</fullName>
        <filterScope>Everything</filterScope>
        <label>All Business Milestones</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>